2011-04-05  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Range insertNode function does not update content in the inspector
        https://bugs.webkit.org/show_bug.cgi?id=57829

        * inspector/elements/modify-chardata-expected.txt:
        * inspector/elements/modify-chardata.html:
2011-04-05  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Range insertNode function does not update content in the inspector
        https://bugs.webkit.org/show_bug.cgi?id=57829

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::pushChildNodesToFrontend):
        (WebCore::InspectorDOMAgent::buildArrayForContainerChildren):

git-svn-id: svn://svn.chromium.org/blink/trunk@83037 bbb929c8-8fbe-4397-9dbb-9b2b20218538